--- a/yamls_configs/s3read_write_with_secret_cfgmap.yaml
+++ b/yamls_configs/s3read_write_with_secret_cfgmap.yaml
@@ -7,10 +7,10 @@ spec:
   type: Python
   pythonVersion: "3"
   mode: cluster
-  image: mcscloud/spark-py:webinar_spark_k8s
+  image: mcscloud/spark-py:spark_k8s_intel
   imagePullPolicy: Always
   mainApplicationFile: local:///opt/spark/custom_jobs/s3read_write.py
-  sparkVersion: "3.0.1"
+  sparkVersion: "3.1.2"
   restartPolicy:
     type: OnFailure
     onFailureRetries: 3
@@ -22,7 +22,7 @@ spec:
     coreLimit: "1200m"
     memory: "512m"
     labels:
-      version: 3.0.1
+      version: 3.1.2
     serviceAccount: spark
     envFrom:
     - secretRef:
@@ -34,7 +34,7 @@ spec:
     instances: 1
     memory: "512m"
     labels:
-      version: 3.0.1
+      version: 3.1.2
     envFrom:
     - secretRef:
         name: s3-secret
