--- a/yamls_configs/s3_hs_server_test.yaml
+++ b/yamls_configs/s3_hs_server_test.yaml
@@ -38,6 +38,7 @@ spec:
         name: s3path-config
   executor:
     cores: 1
+    coreLimit: "1200m"
     instances: 1
     memory: "512m"
     labels:
