--- a/yamls_configs/s3read_write_with_secret_cfgmap.yaml
+++ b/yamls_configs/s3read_write_with_secret_cfgmap.yaml
@@ -31,6 +31,7 @@ spec:
         name: s3path-config
   executor:
     cores: 1
+    coreLimit: "1200m"
     instances: 1
     memory: "512m"
     labels:
