--- a/yamls_configs/spark-pi.yaml
+++ b/yamls_configs/spark-pi.yaml
@@ -21,11 +21,11 @@ metadata:
 spec:
   type: Scala
   mode: cluster
-  image: "gcr.io/spark-operator/spark:v3.1.1"
+  image: "spark:3.4.1"
   imagePullPolicy: Always
   mainClass: org.apache.spark.examples.SparkPi
-  mainApplicationFile: "local:///opt/spark/examples/jars/spark-examples_2.12-3.1.1.jar"
-  sparkVersion: "3.1.1"
+  mainApplicationFile: "local:///opt/spark/examples/jars/spark-examples_2.12-3.4.1.jar"
+  sparkVersion: "3.4.1"
   restartPolicy:
     type: Never
   volumes:
@@ -38,7 +38,7 @@ spec:
     coreLimit: "1200m"
     memory: "512m"
     labels:
-      version: 3.1.1
+      version: 3.4.1
     serviceAccount: spark
     volumeMounts:
       - name: "test-volume"
@@ -49,7 +49,7 @@ spec:
     instances: 1
     memory: "512m"
     labels:
-      version: 3.1.1
+      version: 3.4.1
     volumeMounts:
       - name: "test-volume"
         mountPath: "/tmp"
