--- a/yamls_configs/s3_hs_server_test.yaml
+++ b/yamls_configs/s3_hs_server_test.yaml
@@ -7,7 +7,7 @@ spec:
   type: Python
   pythonVersion: "3"
   mode: cluster
-  image: mcscloud/spark-py:spark_k8s_intel
+  image: "mirror.gcr.io/mcscloud/spark-py:spark_k8s_intel"
   imagePullPolicy: Always
   mainApplicationFile: local:///opt/spark/custom_jobs/s3read_write.py
   sparkVersion: "3.1.2"
